[gd_scene load_steps=16 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://Tourney-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://imgonline-com-ua-Resize-IS6KqCNF2Wgi.png" type="Texture" id=3]
[ext_resource path="res://impact2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://аый (2).png" type="BitMap" id=5]
[ext_resource path="res://30_.mp3" type="AudioStream" id=6]
[ext_resource path="res://Node2D.gd" type="Script" id=7]
[ext_resource path="res://kursor.png" type="Texture" id=8]
[ext_resource path="res://MarketAuto.gd" type="Script" id=9]
[ext_resource path="res://MarketClick.gd" type="Script" id=10]
[ext_resource path="res://Button.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.192157, 0.243137, 0.827451, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="MainBut" type="TextureButton" parent="."]
margin_left = 214.0
margin_top = 143.0
margin_right = 419.0
margin_bottom = 348.0
action_mode = 0
texture_normal = ExtResource( 3 )
texture_click_mask = ExtResource( 5 )

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 5.0
margin_right = 120.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="PerSec" type="Label" parent="."]
margin_left = 310.0
margin_top = 439.0
margin_right = 643.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 8 )
align = 1
valign = 1

[node name="PerClick" type="Label" parent="."]
margin_top = 438.0
margin_right = 311.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 9 )
align = 1
valign = 1

[node name="MarketAuto" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -301.0
margin_right = 330.999
margin_bottom = -3.0
rect_scale = Vector2( 1.00072, 1 )
rect_pivot_offset = Vector2( 192.861, 109 )
color = Color( 0.890196, 0.101961, 0.101961, 1 )
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="MarketAuto"]

[node name="Button" parent="MarketAuto" instance=ExtResource( 11 )]
margin_left = 83.9396
margin_top = 39.0
margin_right = 355.94
margin_bottom = 71.0
cost = 50
effect = 1

[node name="MarketClick" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.0
margin_right = 331.0
margin_bottom = 298.0
color = Color( 0.0156863, 0.121569, 1, 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Button2" parent="MarketClick" instance=ExtResource( 11 )]
margin_left = 82.0
margin_top = 37.0
margin_right = 354.0
margin_bottom = 69.0
type = 1
cost = 10
effect = 1

[node name="Kursor" type="Sprite" parent="MarketClick"]
position = Vector2( 41.1971, 145 )
scale = Vector2( 0.127976, 0.127976 )
texture = ExtResource( 8 )

[node name="Tween" type="Tween" parent="MarketClick"]

[node name="HUI" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -13.0

[node name="Timer" type="Timer" parent="."]

[connection signal="Score_Changed" from="." to="Node2D" method="on_Score_Changed"]
[connection signal="pressed" from="MainBut" to="." method="_on_MainBut_pressed"]
[connection signal="pressed" from="MainBut" to="Node2D" method="_on_MainBut_pressed"]
[connection signal="mouse_entered" from="MarketAuto" to="MarketAuto" method="_on_MarketAuto_mouse_entered"]
[connection signal="mouse_exited" from="MarketAuto" to="MarketAuto" method="_on_MarketAuto_mouse_exited"]
[connection signal="Pokupka" from="MarketAuto/Button" to="." method="on_Pokupka"]
[connection signal="mouse_entered" from="MarketClick" to="MarketClick" method="_on_MarketClick_mouse_entered"]
[connection signal="mouse_exited" from="MarketClick" to="MarketClick" method="_on_MarketClick_mouse_exited"]
[connection signal="Pokupka" from="MarketClick/Button2" to="." method="on_Pokupka"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
